Apply ModuleSource to interpreter